# localbc-v2

./: README.md
bcv2/: Cargo.toml
bcv2/src/: block.rs  blockchain.rs  chain.rs  lib.rs  main.rs  network.rs
localBC-v2/: Cargo.toml
localBC-v2/src/: block.rs  blockchain.rs  main.rs
