[package]
name = "JTG"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
once_cell = "1.5"
pretty_env_logger = "0.4"
ring = "0.16"
base64 = "0.13"
tokio-tungstenite = "0.14"
futures = "0.3"
rand = "0.8"
log = "0.4"
simple_logger = "1.11"


[[bin]]
name = "jex_local_blockchain"
path = "src/main.rs"
